.compile_errors_snapshot.txt
   Compiling gam v0.2.1 (/Users/user/gam)
error[E0432]: unresolved import `crate::gpu::error`
  --> src/gpu/kernels/cell_moments.rs:12:17
   |
12 | use crate::gpu::error::GpuError;
   |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/fused_xtwx.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
  --> src/gpu/kernels/hutchpp.rs:10:17
   |
10 | use crate::gpu::error::GpuError;
   |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/irls_link.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/reductions.rs:7:17
  |
7 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/row_scale.rs:7:17
  |
7 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error[E0432]: unresolved import `crate::gpu::error`
 --> src/gpu/kernels/spatial.rs:8:17
  |
8 | use crate::gpu::error::GpuError;
  |                 ^^^^^ could not find `error` in `gpu`

error: unused import: `TensorBSplineSpec`
  --> src/terms/term_builder.rs:31:68
   |
31 |     SmoothBasisSpec, SmoothTermSpec, TensorBSplineIdentifiability, TensorBSplineSpec,
   |                                                                    ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src/lib.rs:45:9
   |
45 | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error[E0308]: mismatched types
     --> src/families/bernoulli_marginal_slope.rs:17206:13
      |
17206 |             cache,
      |             ^^^^^ expected `Arc<...>`, found `BernoulliMarginalSlopeExactEvalCache`
      |
      = note: expected struct `std::sync::Arc<BernoulliMarginalSlopeExactEvalCache>`
                 found struct `BernoulliMarginalSlopeExactEvalCache`
help: call `Into::into` on this expression to convert `BernoulliMarginalSlopeExactEvalCache` into `std::sync::Arc<BernoulliMarginalSlopeExactEvalCache>`
      |
17206 |             cache: cache.into(),
      |             ++++++      +++++++

error[E0425]: cannot find function `location_scale_hazard_component` in this scope
    --> src/families/survival_predict.rs:1851:27
     |
1851 |         .map(|(&q, &q_t)| location_scale_hazard_component(q, q_t, inverse_link))
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0308]: mismatched types
     --> src/families/transformation_normal.rs:15363:17
      |
15360 |             let eval = evaluate_custom_family_joint_hyper(
      |                        ---------------------------------- arguments to this function are incorrect
...
15363 |                 options,
      |                 ^^^^^^^ expected `&BlockwiseFitOptions`, found `BlockwiseFitOptions`
      |
note: function defined here
     --> src/families/custom_family.rs:17526:8
      |
17526 | pub fn evaluate_custom_family_joint_hyper<F: CustomFamily + Clone + Send + Sync + 'static>(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
17529 |     options: &BlockwiseFitOptions,
      |     -----------------------------
help: consider borrowing here
      |
15363 |                 &options,
      |                 +

error[E0308]: mismatched types
     --> src/families/transformation_normal.rs:15403:17
      |
15400 |             let eval = evaluate_custom_family_joint_hyper_efs(
      |                        -------------------------------------- arguments to this function are incorrect
...
15403 |                 options,
      |                 ^^^^^^^ expected `&BlockwiseFitOptions`, found `BlockwiseFitOptions`
      |
note: function defined here
     --> src/families/custom_family.rs:18039:8
      |
18039 | pub fn evaluate_custom_family_joint_hyper_efs<F: CustomFamily + Clone + Send + Sync + 'static>(
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
18042 |     options: &BlockwiseFitOptions,
      |     -----------------------------
help: consider borrowing here
      |
15403 |                 &options,
      |                 +

error[E0382]: borrow of moved value: `penalty_counts`
     --> src/families/custom_family.rs:19392:50
      |
19311 |     let penalty_counts = validate_blockspecs(specs)?;
      |         -------------- move occurs because `penalty_counts` has type `Vec<usize>`, which does not implement the `Copy` trait
19312 |     let label_layout = penalty_label_layout(specs, penalty_counts)?;
      |                                                    -------------- value moved here
...
19392 |         let per_block = split_log_lambdas(&rho0, &penalty_counts)?;
      |                                                  ^^^^^^^^^^^^^^^ value borrowed here after move
      |
note: consider changing this parameter type in function `penalty_label_layout` to borrow instead if owning the value isn't necessary
     --> src/families/custom_family.rs:6668:21
      |
 6666 | fn penalty_label_layout(
      |    -------------------- in this function
 6667 |     specs: &[ParameterBlockSpec],
 6668 |     penalty_counts: Vec<usize>,
      |                     ^^^^^^^^^^ this parameter takes ownership of the value
      = note: borrow occurs due to deref coercion to `[usize]`
help: consider cloning the value if the performance cost is acceptable
      |
19312 |     let label_layout = penalty_label_layout(specs, penalty_counts.clone())?;
      |                                                                  ++++++++

error[E0382]: borrow of moved value: `z`
   --> src/geometry/grassmann.rs:197:46
    |
196 |         let z = from_flat(vec, self.n, self.k)?;
    |             - move occurs because `z` has type `ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 2]>, f64>`, which does not implement the `Copy` trait
197 |         let projected = z - y.dot(&y.t().dot(&z));
    |                         - value moved here   ^^ value borrowed here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
197 |         let projected = z.clone() - y.dot(&y.t().dot(&z));
    |                          ++++++++

error[E0004]: non-exhaustive patterns: `Err(ArrowSchurError::AdaptiveCorrectionFailed { .. })` not covered
   --> src/solver/latent_inner.rs:257:19
    |
257 |             match step_result {
    |                   ^^^^^^^^^^^ pattern `Err(ArrowSchurError::AdaptiveCorrectionFailed { .. })` not covered
    |
note: `Result<(ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 1]>, f64>, ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 1]>, f64>, ArrowFactorCache), ArrowSchurError>` defined here
   --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c/library/core/src/result.rs:557:1
   ::: /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c/library/core/src/result.rs:566:5
    |
    = note: not covered
    = note: the matched value is of type `Result<(ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 1]>, f64>, ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 1]>, f64>, ArrowFactorCache), ArrowSchurError>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
354 ~                 },
355 +                 Err(ArrowSchurError::AdaptiveCorrectionFailed { .. }) => todo!()
    |

error[E0004]: non-exhaustive patterns: `BSplineKnotSpec::PeriodicUniform { .. }` not covered
    --> src/terms/smooth.rs:4765:40
     |
4765 |             let requested_cols = match marginalspec.knotspec {
     |                                        ^^^^^^^^^^^^^^^^^^^^^ pattern `BSplineKnotSpec::PeriodicUniform { .. }` not covered
     |
note: `BSplineKnotSpec` defined here
    --> src/terms/basis.rs:1618:10
     |
1618 | pub enum BSplineKnotSpec {
     |          ^^^^^^^^^^^^^^^
...
1629 |     PeriodicUniform {
     |     --------------- not covered
     = note: the matched value is of type `BSplineKnotSpec`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
     |
4774 ~                 } => num_internal_knots.unwrap_or(8) + marginalspec.degree + 1,
4775 ~                 BSplineKnotSpec::PeriodicUniform { .. } => todo!(),
     |

Some errors have detailed explanations: E0004, E0308, E0382, E0425, E0432.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `gam` (lib) due to 16 previous errors
